k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grossvati
  name: grossvati
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: grossvati
  sessionAffinity: None
  type: ClusterIP
