k8s/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: grossvati
spec:
  ingressClassName: haproxy
  rules:
  - host: grossvati.svc
    http:
      paths:
      - backend:
          service:
            name: grossvati
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grossvati.svc
    secretName: ing-tls
